--- a/design-your-life/package.json
+++ b/design-your-life/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "antd": "^3.22.1",
+    "faker": "latest",
+    "lodash": "latest",
+    "prop-types": "latest",
+    "react": "latest",
+    "react-dom": "latest",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
-    "semantic-ui-react": "^0.88.0",
+    "react-scripts": "latest",
+    "semantic-ui-react": "latest",
     "styled-components": "^4.3.2"
   },
   "scripts": {
