--- a/design-your-life/package.json
+++ b/design-your-life/package.json
@@ -12,7 +12,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "latest",
     "semantic-ui-react": "latest",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
