--- a/design-your-life/package.json
+++ b/design-your-life/package.json
@@ -5,13 +5,16 @@
   "dependencies": {
     "antd": "^3.22.2",
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "formik": "^1.5.8",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "reactstrap": "^8.0.1",
     "semantic-ui-react": "^0.88.0",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
